--- a/about.html
+++ b/about.html
@@ -69,11 +69,12 @@
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 right-side">
 						<ul>
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+							<!--<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
 							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-							<li><a href="#"><i class="fa fa-flickr"></i></a></li>
+							<li><a href="#"><i class="fa fa-flickr"></i></a></li>-->
 						</ul>
 					</div>
 					<div class="clearfix"></div>
@@ -384,11 +385,12 @@
 						<div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</div>
 						<ul>
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+							<!--<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
 							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-							<li><a href="#"><i class="fa fa-flickr"></i></a></li>
+							<li><a href="#"><i class="fa fa-flickr"></i></a></li>-->
 						</ul>
 					</div>
 					<div class="col-lg-3 col-md-3 col-sm-6 col-footer footer-nav first-nav">
