--- a/index.html
+++ b/index.html
@@ -397,11 +397,12 @@
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 right-side">
 						<ul>
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+							<!---<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
 							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-							<li><a href="#"><i class="fa fa-flickr"></i></a></li>
+							<li><a href="#"><i class="fa fa-flickr"></i></a></li>-->
 						</ul>
 					</div>
 				</div>
@@ -1564,9 +1565,10 @@
 							<span class="spliter"></span>
 							<div class="clearfix"></div>
 							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="#"><i class="fa fa-linkeding"></i></a>
+							<!--<a href="#"><i class="fa fa-twitter"></i></a>
 							<a href="#"><i class="fa fa-pinterest"></i></a>
-							<a href="#"><i class="fa fa-instagram"></i></a>
+							<a href="#"><i class="fa fa-instagram"></i></a>-->
 						</div>
 					</div>
 					<div class="col-lg-3 col-sm-6">
@@ -1577,9 +1579,10 @@
 							<span class="spliter"></span>
 							<div class="clearfix"></div>
 							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="#"><i class="fa fa-linkeding"></i></a>
+							<!--<a href="#"><i class="fa fa-twitter"></i></a>
 							<a href="#"><i class="fa fa-pinterest"></i></a>
-							<a href="#"><i class="fa fa-instagram"></i></a>
+							<a href="#"><i class="fa fa-instagram"></i></a>-->
 						</div>
 					</div>
 					<div class="col-lg-3 col-sm-6">
@@ -1590,9 +1593,10 @@
 							<span class="spliter"></span>
 							<div class="clearfix"></div>
 							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="#"><i class="fa fa-linkeding"></i></a>
+							<!--<a href="#"><i class="fa fa-twitter"></i></a>
 							<a href="#"><i class="fa fa-pinterest"></i></a>
-							<a href="#"><i class="fa fa-instagram"></i></a>
+							<a href="#"><i class="fa fa-instagram"></i></a>-->
 						</div>
 					</div>
 					<div class="col-lg-3 col-sm-6">
@@ -1603,9 +1607,10 @@
 							<span class="spliter"></span>
 							<div class="clearfix"></div>
 							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="#"><i class="fa fa-linkeding"></i></a>
+							<!--<a href="#"><i class="fa fa-twitter"></i></a>
 							<a href="#"><i class="fa fa-pinterest"></i></a>
-							<a href="#"><i class="fa fa-instagram"></i></a>
+							<a href="#"><i class="fa fa-instagram"></i></a>-->
 						</div>
 					</div>
 				</div>
@@ -1889,6 +1894,8 @@
 						<div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 col-lg-offset-1 col-sm-pull-5">
 							<form class="contact-form" action="#" method="post">
 								<input class="name" type="text" name="name" placeholder="Name" required>
+								<input class="empresa" type="empresa" name="empresa" placeholder="Empresa" required>
+								<input class="telefono" type="telefono" name="telefono" placeholder="Telefono" required>
 								<input class="email" type="email" name="email" placeholder="Email" required>
 								<textarea class="message" name="message" placeholder="Message" required></textarea>
 								<input class="submit btn transparent p10-50 border-2" type="submit" value="SUBMIT">
@@ -1913,11 +1920,12 @@
 						<div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</div>
 						<ul>
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa fa-linkeding"></i></a></li>
+							<!--<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
 							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-							<li><a href="#"><i class="fa fa-flickr"></i></a></li>
+							<li><a href="#"><i class="fa fa-flickr"></i></a></li>-->
 						</ul>
 					</div>
 					<div class="col-lg-3 col-md-3 col-sm-6 col-footer footer-nav first-nav">
