--- a/price.html
+++ b/price.html
@@ -388,11 +388,12 @@
 						<div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</div>
 						<ul>
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa fa-linkeding"></i></a></li>
+							<!--<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
 							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-							<li><a href="#"><i class="fa fa-flickr"></i></a></li>
+							<li><a href="#"><i class="fa fa-flickr"></i></a></li>-->
 						</ul>
 					</div>
 					<div class="col-lg-3 col-md-3 col-sm-6 col-footer footer-nav first-nav">
