nueva version antes de culminar

--- a/blog-detail.html
+++ b/blog-detail.html
@@ -136,7 +136,7 @@
 					<div class="col-lg-3 col-md-3 col-sm-9 col-xs-9">
 						<div class="c-table logo-container">
 							<figure class="c-row">
-								<a class="c-cell" href="index.html"><img src="assets/images/logo-red.png" alt="logo-img"></a>
+								<a class="c-cell" href="index.html"><img src="assets/images/logoempresa.jpg" alt="logo-img"></a>
 							</figure>
 						</div>
 					</div>
@@ -261,7 +261,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-md-3 col-sm-6 footer-left col-footer">
-						<a class="footer-logo" href="index.html"><img src="assets/images/footer-logo-red.png" alt="logo-img"></a>
+						<a class="footer-logo" href="index.html"><img src="assets/images/footer-logoempresa.jpg" alt="logo-img"></a>
 						<div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</div>
 						<ul>
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -324,7 +324,7 @@
 				<div class="color-section">
 					<div class="section-title">Colors scheme:</div>
 					<div class="colors-list items-switcher">
-						<div class="item red active" data-color-path="assets/css/colors/red.css" data-logo-path="assets/images/logo-red.png" data-footer-logo-path="assets/images/footer-logo-red.png"></div>
+						<div class="item red active" data-color-path="assets/css/colors/red.css" data-logo-path="assets/images/logoempresa.jpg" data-footer-logo-path="assets/images/footer-logoempresa.jpg"></div>
 						<div class="item blue" data-color-path="assets/css/colors/blue.css" data-logo-path="assets/images/logo-blue.png" data-footer-logo-path="assets/images/footer-logo-blue.png"></div>
 						<div class="item orange" data-color-path="assets/css/colors/orange.css" data-logo-path="assets/images/logo-orange.png" data-footer-logo-path="assets/images/footer-logo-orange.png"></div>
 						<div class="item green" data-color-path="assets/css/colors/green.css" data-logo-path="assets/images/logo-green.png" data-footer-logo-path="assets/images/footer-logo-green.png"></div>
